<resources>
    <string name="app_name">Housing Society</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="send_password">Send Password</string>
    <string name="maintenance">Maintenance</string>
    <string name="pay_now">Pay Now</string>
    <string name="notices">Notices</string>
    <string name="generate_now">Generate Now</string>
    <string name="directory">Directory</string>
    <string name="view_now">View Now</string>
    <string name="staff_details">Staff Details</string>
    <string name="event_booking">Event Booking</string>
    <string name="book_now">Book Now</string>
    <string name="tenants">Tenants</string>
    <string name="add_now">Add Now</string>
    <string name="click_for_more">Click for more</string>
    <string name="bills">Bills</string>
    <string name="complaints">Complaints</string>
    <string name="welcome_admin">  Welcome Admin  </string>
    <string name="expand_here">Expand here</string>
    <string name="welcome_member">  Welcome Member  </string>
    <string name="fixed_charges">Fixed Charges</string>
    <string name="parking_charges">Parking Charges</string>
    <string name="water_supply_charges">Water Supply Charges</string>
    <string name="entrance_charges">Entrance Charges</string>
    <string name="property_taxes">Property Taxes</string>
    <string name="other_charges">Other Charges</string>
    <string name="total">Total</string>
    <string name="amount">Amount</string>
    <string name="particulars">Particulars</string>
    <string name="rs_550">Rs 550</string>
    <string name="rs_200">Rs 200</string>
    <string name="rs_500">Rs 500</string>
    <string name="rs_100">Rs 100</string>
    <string name="rs_50">Rs 50</string>
    <string name="rs_1900">Rs 1900</string>
    <string name="any_notices">!!! Any Notices !!!</string>
    <string name="date">Date:  </string>
    <string name="time">Time:  </string>
    <string name="generate">generate</string>
    <string name="description">Description:  </string>
    <string name="flat_no">Flat No: </string>
    <string name="complaints_here">Complaints here!!</string>
    <string name="name">Name: </string>
    <string name="contact">Contact: </string>
    <string name="cleaner">Cleaner</string>
    <string name="electrician">Electrician</string>
    <string name="plumber">Plumber</string>
    <string name="view_event">View Event</string>
    <string name="add_event">Add Event</string>
    <string name="event">Event</string>
    <string name="hello_admin">Hello Admin</string>
    <string name="a_101_saraswati_society">A-101/Saraswati Society</string>
    <string name="title_activity_admin_maintenance_detail">AdminMaintenanceDetail</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>