<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MemberGenerateBill">

    <TextView
        android:id="@+id/directory"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/maintenance"
        android:textColor="#29241E"
        android:background="@drawable/text_bg"
        android:textSize="50sp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:text="" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <TableRow
            android:background="#29241E">

            <TextView
                android:layout_width="226dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/particulars"
                android:textColor="#D18323"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/amount"
                android:textColor="#D18323"
                android:textSize="28sp"
                android:textStyle="bold" />
        </TableRow>
        <TableRow
            android:background="#B3BDBB">

            <TextView
                android:layout_width="226dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/fixed_charges"
                android:textColor="#29241E"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/rs_550"
                android:textColor="#29241E"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>
        <TableRow
            android:background="#B3BDBB">

            <TextView
                android:layout_width="226dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/parking_charges"
                android:textColor="#29241E"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/rs_200"
                android:textColor="#29241E"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>
        <TableRow
            android:background="#B3BDBB">

            <TextView
                android:layout_width="226dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/water_supply_charges"
                android:textColor="#29241E"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/rs_500"
                android:textColor="#29241E"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>
        <TableRow
            android:background="#B3BDBB">

            <TextView
                android:layout_width="226dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/entrance_charges"
                android:textColor="#29241E"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/rs_100"
                android:textColor="#29241E"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>
        <TableRow
            android:background="#B3BDBB">

            <TextView
                android:layout_width="226dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/property_taxes"
                android:textColor="#29241E"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/rs_50"
                android:textColor="#29241E"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>
        <TableRow
            android:background="#B3BDBB">

            <TextView
                android:layout_width="226dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/other_charges"
                android:textColor="#29241E"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/rs_500"
                android:textColor="#29241E"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>
        <TableRow
            android:background="#29241E">

            <TextView
                android:layout_width="226dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/total"
                android:textColor="#D18323"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/rs_1900"
                android:textColor="#D18323"
                android:textSize="28sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_paybill"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/pay_now"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

</LinearLayout>