<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".AdminTenantDet">

    <TextView
        android:id="@+id/tenant_det"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/tenants"
        android:textColor="#29241E"
        android:background="@drawable/text_bg"
        android:textSize="39sp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textStyle="bold|italic" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/layout_bg">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="Add Tenant"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/btn_addTenant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:padding="15dp"
                android:text="@string/add_now"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>
        <ImageView
            android:layout_width="120dp"
            android:layout_height="110dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/tenants"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/tenants" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/layout_bg">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="View Tenant"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/btn_viewTenant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:padding="15dp"
                android:text="@string/view_now"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@drawable/directory"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/electrician" />
    </RelativeLayout>


</LinearLayout>